HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuCaptureNonGpuSafe/Expected.uv
//! Expected diagnostic metadata for the GpuCaptureNonGpuSafe rejected-source specimen.

expectedDiagnostic("E-CON-0153", "rule.20.GpuCapture-NonGpuSafe-Err")
